fixed tag wrapping

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -247,9 +247,11 @@ hr{
 .content.tag{
 	background-color: #5E5E5E;
 	color: rgb(244, 244, 244);
-	line-height: 1.8;
-	padding: 2px;
-	border-radius: 3px;
+	font-size: small;
+	padding: 5px;
+	margin: 3px;
+	display: inline-block;
+	border-radius: 2px;
 }
 
 .divider td{
